syntax = "proto3";

package greeter;

service Greeter {
  // Simple greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  // Streaming greetings to demonstrate bulkhead
  rpc SayHelloStream (HelloRequest) returns (stream HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
